@@ -1,5 +1,7 @@
 2001-04-16  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* ogdi/drivers/rpf/rpf.c: added capabilities support.
+
 	* makefile, ogdi/include/makefile: added special non-local install
 	rules for include files and creating target directories. 
 
